More CSS tweaks / Major index mobile overhaul

--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,17 @@
         <div class="pageWrapper">
 
         <header>
-            <div class="pageTitle">
-            <h1 class="noisyText">ALL UNDER HEAVEN</h1>
-            </div>
+      <div class="pageTitle">
+        <h1 class="noisyText">
+          <span class="titleLine">ALL UNDER</span>
+          <span class="heavenWord">
+            HE<span class="letterA">A</span><span class="letterV">V</span
+            ><span class="letterE">E</span>N
+          </span>
+        </h1>
+      </div>
 
-             <nav role="navigation">
+      <nav role="navigation">
         <div id="menuToggle">
           <input type="checkbox" id="menuCheckbox" />
 
@@ -46,8 +52,7 @@
           </div>
         </div>
       </nav>
-            
-        </header>
+    </header>
 
         <main>
 
@@ -58,12 +63,13 @@
             </div>
 
             <div id="contactText">
-              <p>Have a question, issue, or just want to share your thoughts? Whether it's about an order, our merch, or feelings on any of our tracks — We want to hear from you, hit us up and we’ll get back to you as soon as we can.</p>
+              <p>Have a question, issue, or just want to share your thoughts?</p>
+              <p>Whether it's about an order, our merch, or feelings on any of our tracks — We want to hear from you, hit us up and we’ll get back to you as soon as we can.</p>
               <p>📩 Reach out to the email below.</p>
             </div>
 
             <div id="contactEmail">
-              <h2>updates@allunderhvn.com</h2>
+              <h2><a href="mailto:updates@allunderhvn.com">updates@allunderhvn.com</a></h2>
             </div>
 
           </section>
