--- a/privacy.html
+++ b/privacy.html
@@ -14,11 +14,17 @@
         <div class="pageWrapper">
 
         <header>
-            <div class="pageTitle">
-            <h1 class="noisyText">ALL UNDER HEAVEN</h1>
-            </div>
+      <div class="pageTitle">
+        <h1 class="noisyText">
+          <span class="titleLine">ALL UNDER</span>
+          <span class="heavenWord">
+            HE<span class="letterA">A</span><span class="letterV">V</span
+            ><span class="letterE">E</span>N
+          </span>
+        </h1>
+      </div>
 
-             <nav role="navigation">
+      <nav role="navigation">
         <div id="menuToggle">
           <input type="checkbox" id="menuCheckbox" />
 
@@ -46,10 +52,58 @@
           </div>
         </div>
       </nav>
-            
-        </header>
+    </header>
 
         <main>
+
+          <section class="privacyWrap">
+            <h2 class="privacyTitle">Privacy Policy</h2>
+            <p>AUH respects your privacy. This policy will help explain how we collect, use, and protect your information when you interact with our website, sign up for our email list, or make purchases through our online store.</p>
+
+            <div class="privacySub">
+              <h3 class="pSubTitle">Information We Collect</h3>
+              <p>We collect personal information in two main ways:</p>
+              <ol>
+                <li>
+                  <strong>Email Sign-Ups (via ConvertKit)</strong>
+                  <p>When you subscribe to our mailing list, we collect your email address so we can send you updates about new releases, tours, and exclusive merch.</p>
+                </li>
+                <li>
+                  <strong>Merchandise Sales (via Square)</strong>
+                  <p>When you click our Store link, you're redirected to our online store powered by Square. Any information you provide there (like your name, address, or payment details) is handled securely by Square under their own privacy policies.</p>
+                </li>
+              </ol>                           
+              <p>We do not collect or store your payment or shipping information on our own website.</p>
+            </div>
+
+            <div class="privacySub">
+              <h3 class="pSubTitle">How We Use Your Information</h3>
+              <p>To send you email updates, announcements, and news about All Under Heaven (via ConvertKit).</p>
+              <p>To analyze email engagement (opens and clicks) so we can improve what we send you.</p>
+              <p>We do not sell or share your personal information with third parties.</p>
+            </div>
+
+            <div class="privacySub">
+              <h3 class="pSubTitle">Third-Party Services</h3>
+              <p>We use the following trusted platforms:</p>
+              <p>ConvertKit for managing our email list. You can read their <a href="https://kit.com/privacy" target="_blank">Privacy Policy here</a></p>
+              <p>Square for securely processing payments and fulfilling merchandise orders. You can view their <a href="https://squareup.com/us/en/legal/general/privacy" target="_blank">Privacy Policy here</a></p>
+              <p>These platforms may collect data through cookies or similar technologies. Please refer to their policies for full details.</p>
+            </div>
+
+            <div class="privacySub">
+              <h3 class="pSubTitle">Your Choices</h3>
+              <p>You can:</p>
+              <p>Unsubscribe from our emails at any time by clicking the link at the bottom of any message we send.</p>
+              <p>Request deletion of your information from our mailing list by emailing us at <a href="mailto:updates@allunderhvn.com">updates@allunderhvn.com</a></p>
+            </div>
+
+            <div class="privacySub">
+              <h3 class="pSubTitle">Contact Us</h3>
+              <p>If you have any questions or concerns about this Privacy Policy, feel free to reach out at:</p>
+              <p>📧 <a href="mailto:updates@allunderhvn.com">updates@allunderhvn.com</a></p>
+            </div>
+          </section>
 
         </main>
 
