--- a/tickets.html
+++ b/tickets.html
@@ -12,39 +12,45 @@
   <body class="bodyBackground">
     <div class="pageWrapper">
       <header>
-        <div class="pageTitle">
-          <h1 class="noisyText">ALL UNDER HEAVEN</h1>
-        </div>
+      <div class="pageTitle">
+        <h1 class="noisyText">
+          <span class="titleLine">ALL UNDER</span>
+          <span class="heavenWord">
+            HE<span class="letterA">A</span><span class="letterV">V</span
+            ><span class="letterE">E</span>N
+          </span>
+        </h1>
+      </div>
 
-        <nav role="navigation">
-          <div id="menuToggle">
-            <input type="checkbox" id="menuCheckbox" />
+      <nav role="navigation">
+        <div id="menuToggle">
+          <input type="checkbox" id="menuCheckbox" />
 
-            <span></span>
-            <span></span>
-            <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
 
-            <div id="menu">
-              <div id="flameCanvas"></div>
-              <ul class="noisyText">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="music.html">MUSIC</a></li>
-                <li><a href="tickets.html">TOUR</a></li>
-                <li>
-                  <a href="https://auhnj.square.site/" target="_blank">STORE</a>
-                </li>
-                <li>
-                  <a
-                    href="https://all-under-heaven.kit.com/dc9f53c274"
-                    target="_blank"
-                    >STAY UP TO DATE</a
-                  >
-                </li>
-              </ul>
-            </div>
+          <div id="menu">
+            <div id="flameCanvas"></div>
+            <ul class="noisyText">
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="music.html">MUSIC</a></li>
+              <li><a href="tickets.html">TOUR</a></li>
+              <li>
+                <a href="https://auhnj.square.site/" target="_blank">STORE</a>
+              </li>
+              <li>
+                <a
+                  href="https://all-under-heaven.kit.com/dc9f53c274"
+                  target="_blank"
+                  >STAY UP TO DATE</a
+                >
+              </li>
+            </ul>
           </div>
-        </nav>
-      </header>
+        </div>
+      </nav>
+    </header>
 
       <main>
         <section class="tourTickets">
