--- a/tos.html
+++ b/tos.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>terms of service - all under heaven</title>
+    <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css?v=3" />
+    <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>terms of service - all under heaven</title>
-        <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon">
-        <link rel="stylesheet" href="style.css?v=3">
-        <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
-    </head>
+  <body class="bodyBackground">
+    <div class="pageWrapper">
+      <header>
+      <div class="pageTitle">
+        <h1 class="noisyText">
+          <span class="titleLine">ALL UNDER</span>
+          <span class="heavenWord">
+            HE<span class="letterA">A</span><span class="letterV">V</span
+            ><span class="letterE">E</span>N
+          </span>
+        </h1>
+      </div>
 
-    <body class="bodyBackground">
-        <div class="pageWrapper">
-        <header>
-            <div class="pageTitle">
-            <h1 class="noisyText">ALL UNDER HEAVEN</h1>
-            </div>
-
-             <nav role="navigation">
+      <nav role="navigation">
         <div id="menuToggle">
           <input type="checkbox" id="menuCheckbox" />
 
@@ -45,41 +50,113 @@
           </div>
         </div>
       </nav>
-            
-        </header>
+    </header>
 
-        <main>
+      <main>
+        <section class="termsWrap">
+          <h2 class="termsTitle">Terms of Service</h2>
+          <p>
+            Welcome to the official website of All Under Heaven ("we", "us",
+            "our"). By accessing or using this site, you agree to the following
+            terms and conditions.
+          </p>
 
-        </main>
+          <div class="termsSection">
+            <h3 class="tSubTitle">1. Use of Content</h3>
+            <p>
+              All images, artwork, logos, and visual assets—including album
+              covers and backdrops—are the intellectual property of All Under
+              Heaven and may not be reproduced, altered, or distributed without
+              permission.
+            </p>
+            <p>
+              You are welcome to share links to our music and website for
+              non-commercial purposes, but please do not repost or republish our
+              content without credit or authorization.
+            </p>
+          </div>
 
-        <script src="fog.js"></script>
+          <div class="termsSection">
+            <h3 class="tSubTitle">2. Embedded Media</h3>
+            <p>
+              Our site may include embedded media such as YouTube videos (e.g.
+              our Audiotree session). These are subject to YouTube’s own terms
+              and privacy practices. We are not responsible for the content or
+              performance of third-party platforms.
+            </p>
+          </div>
+
+          <div class="termsSection">
+            <h3 class="tSubTitle">3. Custom Web Elements</h3>
+            <p>
+              This website features visual effects altered from shaders originally published on <a href="https://shadertoy.com" target="_blank" rel="noopener noreferrer">ShaderToy</a>. These are for
+              aesthetic and navigational purposes only.
+            </p>
+          </div>
+
+          <div class="termsSection">
+            <h3 class="tSubTitle">4. External Links</h3>
+            <p>
+              Links to third-party services (like our online store on Square or
+              streaming platforms) are provided for your convenience. We are not
+              responsible for their content, policies, or functionality.
+            </p>
+          </div>
+
+          <div class="termsSection">
+            <h3 class="tSubTitle">5. Acceptance</h3>
+            <p>
+              By continuing to browse or interact with our site, you agree to
+              these terms. We may update this policy from time to time without
+              notice.
+            </p>
+          </div>
+
+          <div class="termsSection">
+            <h3 class="tSubTitle">6. Contact</h3>
+            <p>
+              If you have any questions about these Terms of Service, reach out
+              at
+              <a href="mailto:updates@allunderhvn.com"
+                >updates@allunderhvn.com</a
+              >.
+            </p>
+          </div>
+        </section>
+      </main>
+
+      <script src="fog.js"></script>
     </div>
-     <footer>
-        <div class="footerTop">
-            <nav class="footerLinks">
-                <a href="contact.html">Contact Us</a>
-                <a href="returns.html">Returns</a>
-                <a href="shipping.html">Shipping</a>
-            </nav>
+    <footer>
+      <div class="footerTop">
+        <nav class="footerLinks">
+          <a href="contact.html">Contact Us</a>
+          <a href="returns.html">Returns</a>
+          <a href="shipping.html">Shipping</a>
+        </nav>
 
-            <nav class="footerSocials">
-                <a href="https://www.instagram.com/allunderhvn/" target="_blank"><img src="images/iglogo.svg" alt="Instagram"></a>
-                <a href="https://www.facebook.com/profile.php?id=100064778059647" target="_blank"><img src="images/fblogo.svg" alt="Facebook"></a>
-            </nav>
-        </div>
+        <nav class="footerSocials">
+          <a href="https://www.instagram.com/allunderhvn/" target="_blank"
+            ><img src="images/iglogo.svg" alt="Instagram"
+          /></a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100064778059647"
+            target="_blank"
+            ><img src="images/fblogo.svg" alt="Facebook"
+          /></a>
+        </nav>
+      </div>
 
-        <div class="footerBottom">
-            <p>© 2025 All Under Heaven</p>
-            <nav class="legal-links">
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="shipping.html">Shipping Policy</a>
-                <a href="returns.html">Returns</a>
-                <a href="contact.html">Contact Info</a>
-                <a href="tos.html">Terms of Service</a>
-            </nav>
-        </div>
+      <div class="footerBottom">
+        <p>© 2025 All Under Heaven</p>
+        <nav class="legal-links">
+          <a href="privacy.html">Privacy Policy</a>
+          <a href="shipping.html">Shipping Policy</a>
+          <a href="returns.html">Returns</a>
+          <a href="contact.html">Contact Info</a>
+          <a href="tos.html">Terms of Service</a>
+        </nav>
+      </div>
     </footer>
-
-    </body>
-
+  </body>
 </html>
