--- a/update.html
+++ b/update.html
@@ -13,11 +13,17 @@
     <body class="bodyBackground">
 
         <header>
-            <div class="pageTitle">
-            <h1>ALL UNDER HEAVEN</h1>
-            </div>
+      <div class="pageTitle">
+        <h1 class="noisyText">
+          <span class="titleLine">ALL UNDER</span>
+          <span class="heavenWord">
+            HE<span class="letterA">A</span><span class="letterV">V</span
+            ><span class="letterE">E</span>N
+          </span>
+        </h1>
+      </div>
 
-             <nav role="navigation">
+      <nav role="navigation">
         <div id="menuToggle">
           <input type="checkbox" id="menuCheckbox" />
 
@@ -45,8 +51,7 @@
           </div>
         </div>
       </nav>
-            
-        </header>
+    </header>
 
         <main>
         
