--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <body class="bodyBackground">
     <header>
       <div class="pageTitle">
-        <h1 class="noisyText">ALL UNDER HEAVEN</h1>
+        <h1 class="noisyText">
+          <span class="titleLine">ALL UNDER</span>
+          <span class="heavenWord">
+            HE<span class="letterA">A</span><span class="letterV">V</span
+            ><span class="letterE">E</span>N
+          </span>
+        </h1>
       </div>
 
       <nav role="navigation">
