Reworked cloud shader canvas sizing / Minor CSS tweaks / More mobile friendly tweaks

--- a/tickets.html
+++ b/tickets.html
@@ -64,14 +64,12 @@
             <div class="tourLocation">
               <p>Garwood, NJ</p>
             </div>
-            <div class="tourLinkBorder">
               <a
                 href="https://www.eventbrite.com/e/rival-schools-at-crossroads-w-all-under-heaven-high-tickets-1375107626929"
                 class="tourLink"
                 target="_blank"
                 >TICKETS</a
               >
-            </div>
           </div>
 
           <div class="tourBorder">
@@ -84,14 +82,30 @@
             <div class="tourLocation">
               <p>Brooklyn, NY</p>
             </div>
-            <div class="tourLinkBorder">
               <a
                 href="https://tickets.venuepilot.com/e/sunday-drive-10-year-showcase-leaving-time-all-under-heaven-squint-special-guest-fever-child-fake-eye-f51560"
                 class="tourLink"
                 target="_blank"
                 >TICKETS</a
               >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>October 11th, 2025</p>
             </div>
+            <div class="tourVenue">
+              <p>144 Main St</p>
+            </div>
+            <div class="tourLocation">
+              <p>Danielson, CT</p>
+            </div>
+              <a
+                href="https://www.chubbydogcoffee.com/smalltownmusicfest"
+                class="tourLink"
+                target="_blank"
+                >FREE!!!!!!</a
+              >
           </div>
 
         </section>
