More CSS tweaks...

--- a/music.html
+++ b/music.html
@@ -66,7 +66,7 @@
               href="https://dthw.sh/allunderheavenhigh"
               class="featuredLink"
               target="_blank"
-              >CLICK TO STREAM</a
+              >LISTEN NOW</a
             >
           </div>
         </div>
@@ -83,7 +83,7 @@
                 href="https://linktr.ee/allunderheaven"
                 class="streamLink"
                 target="_blank"
-                >CLICK TO STREAM</a
+                >LISTEN NOW</a
             >
         </div>
 
@@ -97,7 +97,7 @@
             href="https://linktr.ee/allunderheaven"
             class="streamLink"
             target="_blank"
-            >CLICK TO STREAM</a
+            >LISTEN NOW</a
           >
         </div>
 
@@ -108,7 +108,7 @@
             href="https://linktr.ee/allunderheaven"
             class="streamLink"
             target="_blank"
-            >CLICK TO STREAM</a
+            >LISTEN NOW</a
           >
         </div>
 
@@ -119,7 +119,7 @@
             href="https://linktr.ee/allunderheaven"
             class="streamLink"
             target="_blank"
-            >CLICK TO STREAM</a
+            >LISTEN NOW</a
           >
         </div>
       </section>
