--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>all under heaven</title>
     <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css?v=13" />
+    <link rel="stylesheet" href="style.css?v=14" />
     <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
   </head>
 
@@ -51,7 +51,7 @@
       </nav>
     </header>
 
-    <main class="indexMain">
+    <main>
       <section id="indexFeatured">
         <img
           src="images/auh-highCover.jpg"
