Major mobile/multi browser improvement / CSS tweaks / HTML updates to footer pages / Nearing the end

--- a/contact.html
+++ b/contact.html
@@ -14,15 +14,7 @@
         <div class="pageWrapper">
 
         <header>
-      <div class="pageTitle">
-        <h1 class="noisyText">
-          <span class="titleLine">ALL UNDER</span>
-          <span class="heavenWord">
-            HE<span class="letterA">A</span><span class="letterV">V</span
-            ><span class="letterE">E</span>N
-          </span>
-        </h1>
-      </div>
+      <div class="titleImage"></div>
 
       <nav role="navigation">
         <div id="menuToggle">
@@ -63,8 +55,9 @@
             </div>
 
             <div id="contactText">
-              <p>Have a question, issue, or just want to share your thoughts?</p>
-              <p>Whether it's about an order, our merch, or feelings on any of our tracks — We want to hear from you, hit us up and we’ll get back to you as soon as we can.</p>
+              <p>Got an issue with your order? Want to tell us what a song means to you? Maybe you’ve got some cool photos or videos from a show?</p>
+              <p><strong>We’d love to hear from you.</strong></p>
+              <p>Whether it's a merch mix-up, a shipping question, or just something you want to share — drop us a line. We read all of these and we’ll get back to you as soon as we can.</p>
               <p>📩 Reach out to the email below.</p>
             </div>
 
@@ -88,14 +81,20 @@
             </nav>
 
             <nav class="footerSocials">
-                <a href="https://www.instagram.com/allunderhvn/" target="_blank"><img src="images/iglogo.svg" alt="Instagram"></a>
-                <a href="https://www.facebook.com/profile.php?id=100064778059647" target="_blank"><img src="images/fblogo.svg" alt="Facebook"></a>
-            </nav>
+          <a href="https://www.instagram.com/allunderhvn/" target="_blank"
+            ><img src="images/icons8-instagram-50.png" alt="Instagram"
+          /></a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100064778059647"
+            target="_blank"
+            ><img src="images/icons8-facebook-50.png" alt="Facebook"
+          /></a>
+        </nav>
         </div>
 
         <div class="footerBottom">
             <p>© 2025 All Under Heaven</p>
-            <nav class="legal-links">
+            <nav class="legalLinks">
                 <a href="privacy.html">Privacy Policy</a>
                 <a href="shipping.html">Shipping Policy</a>
                 <a href="returns.html">Returns</a>
