--- a/returns.html
+++ b/returns.html
@@ -14,15 +14,7 @@
         <div class="pageWrapper">
 
         <header>
-      <div class="pageTitle">
-        <h1 class="noisyText">
-          <span class="titleLine">ALL UNDER</span>
-          <span class="heavenWord">
-            HE<span class="letterA">A</span><span class="letterV">V</span
-            ><span class="letterE">E</span>N
-          </span>
-        </h1>
-      </div>
+      <div class="titleImage"></div>
 
       <nav role="navigation">
         <div id="menuToggle">
@@ -63,19 +55,21 @@
             </div>
 
             <div id="returnText">
-              <p>We want you to love everything you get from all under heaven. If something’s off with your order — whether it arrived damaged, was the wrong item, or didn’t show up at all — please reach out and we’ll make it right.</p>
-              <p>Return Guidelines</p>
+              <p>Hey — we want you to be stoked about everything you get from all under heaven. If we messed up your order (wrong item, wrong size, etc.), hit us up and we’ll fix it.</p>
+              <h3>Return Guidelines</h3>
             </div>
             <div id="returnGuide">
-              <p>Returns accepted within 14 days of delivery for damaged or incorrect items.</p>
-              <p>To be eligible for a return, items must be unused and in original condition.</p>
-              <p>We do not currently accept exchanges unless the item arrived defective.</p>
-              <p>Sale and limited edition items are final sale unless damaged in transit.</p>
+              <ul>
+              <li>We only do returns if we made a mistake — like sending the wrong stuff.</lo>
+              <li>If your package got damaged during shipping, let us know. Everything we ship is insured through UPS up to a certain amount, so we’ll help sort it out with them.</li>
+              <li>Items need to be unused and in the same condition you got them.</li>
+              <li>Sale and limited edition stuff is final sale, unless it showed up totally wrong.</li>
+              </ul>
             </div>
 
             <div id="returnBottom">
-              <p>To start a return, contact us with your order number and a description of the issue.</p>
-              <a href="contact.html" id="contactLink">Click here</a>
+              <p>If something’s off, please reach out with your order number and what happened. We’ll take care of you.</p>
+              <a href="contact.html" id="contactLink">Click here to contact us</a>
             </div>
 
           </section>
@@ -93,14 +87,20 @@
             </nav>
 
             <nav class="footerSocials">
-                <a href="https://www.instagram.com/allunderhvn/" target="_blank"><img src="images/iglogo.svg" alt="Instagram"></a>
-                <a href="https://www.facebook.com/profile.php?id=100064778059647" target="_blank"><img src="images/fblogo.svg" alt="Facebook"></a>
-            </nav>
+          <a href="https://www.instagram.com/allunderhvn/" target="_blank"
+            ><img src="images/icons8-instagram-50.png" alt="Instagram"
+          /></a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100064778059647"
+            target="_blank"
+            ><img src="images/icons8-facebook-50.png" alt="Facebook"
+          /></a>
+        </nav>
         </div>
 
         <div class="footerBottom">
             <p>© 2025 All Under Heaven</p>
-            <nav class="legal-links">
+            <nav class="legalLinks">
                 <a href="privacy.html">Privacy Policy</a>
                 <a href="shipping.html">Shipping Policy</a>
                 <a href="returns.html">Returns</a>
