--- a/shipping.html
+++ b/shipping.html
@@ -13,15 +13,7 @@
     <body class="bodyBackground">
         <div class="pageWrapper">
         <header>
-      <div class="pageTitle">
-        <h1 class="noisyText">
-          <span class="titleLine">ALL UNDER</span>
-          <span class="heavenWord">
-            HE<span class="letterA">A</span><span class="letterV">V</span
-            ><span class="letterE">E</span>N
-          </span>
-        </h1>
-      </div>
+      <div class="titleImage"></div>
 
       <nav role="navigation">
         <div id="menuToggle">
@@ -62,17 +54,22 @@
             </div>
 
             <div id="shippingText">
-              <p>We currently offer domestic shipping only as we work out the details for international orders. Thanks for your patience as we expand.</p>
-              <p>Shipping Info:</p>
+              <p>We currently offer domestic shipping through our online store.</p>
+              <p>International orders are available too — just not through Square.</p>
+              <p>If you’re outside the U.S. and see something you want, email us directly and we’ll help you place the order. Square doesn’t let us set fair international shipping prices without upgrading our account, so for now, we’re just using it as a catalog for international fans.</p>
+              
             </div>
             <div id="shippingGuide">
-              <p>Orders ship within 1-2 weeks after purchase.</p>
-              <p>You’ll receive a tracking number via email as soon as your order is on the way.</p>
-              <p>We ship via USPS or UPS, depending on the size and weight of your order.</p>
+              <h3>Shipping Info:</h3>
+              <ul>
+              <li>Orders ship within 1-2 weeks after purchase.</li>
+              <li>You’ll receive a tracking number via email as soon as your order is on the way.</li>
+              <li>We ship via USPS or UPS, depending on the size and weight of your order.</li>
+              </ul>
             </div>
 
             <div id="shippingBottom">
-              <p>If you have any issues with delivery, don’t hesitate to contact us.</p>
+              <p>If you have any issues with delivery, don’t hesitate to contact us</p>
               <a href="contact.html" id="contactLink">Click here</a>
             </div>
 
@@ -91,14 +88,20 @@
             </nav>
 
             <nav class="footerSocials">
-                <a href="https://www.instagram.com/allunderhvn/" target="_blank"><img src="images/iglogo.svg" alt="Instagram"></a>
-                <a href="https://www.facebook.com/profile.php?id=100064778059647" target="_blank"><img src="images/fblogo.svg" alt="Facebook"></a>
-            </nav>
+          <a href="https://www.instagram.com/allunderhvn/" target="_blank"
+            ><img src="images/icons8-instagram-50.png" alt="Instagram"
+          /></a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100064778059647"
+            target="_blank"
+            ><img src="images/icons8-facebook-50.png" alt="Facebook"
+          /></a>
+        </nav>
         </div>
 
         <div class="footerBottom">
             <p>© 2025 All Under Heaven</p>
-            <nav class="legal-links">
+            <nav class="legalLinks">
                 <a href="privacy.html">Privacy Policy</a>
                 <a href="shipping.html">Shipping Policy</a>
                 <a href="returns.html">Returns</a>
