--- a/index.html
+++ b/index.html
@@ -5,21 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>all under heaven</title>
     <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css?v=17" />
+    <link rel="stylesheet" href="style.css?v=18" />
     <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
   </head>
 
   <body class="bodyBackground">
     <header>
-      <div class="pageTitle">
-        <h1 class="noisyText">
-          <span class="titleLine">ALL UNDER</span>
-          <span class="heavenWord">
-            HE<span class="letterA">A</span><span class="letterV">V</span
-            ><span class="letterE">E</span>N
-          </span>
-        </h1>
-      </div>
+      <div class="titleImage"></div>
 
       <nav role="navigation">
         <div id="menuToggle">
@@ -109,7 +101,7 @@
             allowfullscreen
           ></iframe>
         </div>
-        <h2 class="noisyText">Check out our audiotree :-)</h2>
+        <h2 class="noisyText">Check out our audio tree :-)</h2>
       </div>
     </main>
 
@@ -127,12 +119,12 @@
 
         <nav class="footerSocials">
           <a href="https://www.instagram.com/allunderhvn/" target="_blank"
-            ><img src="images/iglogo.svg" alt="Instagram"
+            ><img src="images/icons8-instagram-50.png" alt="Instagram"
           /></a>
           <a
             href="https://www.facebook.com/profile.php?id=100064778059647"
             target="_blank"
-            ><img src="images/fblogo.svg" alt="Facebook"
+            ><img src="images/icons8-facebook-50.png" alt="Facebook"
           /></a>
         </nav>
       </div>
