--- a/privacy.html
+++ b/privacy.html
@@ -14,15 +14,7 @@
         <div class="pageWrapper">
 
         <header>
-      <div class="pageTitle">
-        <h1 class="noisyText">
-          <span class="titleLine">ALL UNDER</span>
-          <span class="heavenWord">
-            HE<span class="letterA">A</span><span class="letterV">V</span
-            ><span class="letterE">E</span>N
-          </span>
-        </h1>
-      </div>
+      <div class="titleImage"></div>
 
       <nav role="navigation">
         <div id="menuToggle">
@@ -62,7 +54,7 @@
 
             <div class="privacySub">
               <h3 class="pSubTitle">Information We Collect</h3>
-              <p>We collect personal information in two main ways:</p>
+              <p>We only collect information in 2 ways:</p>
               <ol>
                 <li>
                   <strong>Email Sign-Ups (via ConvertKit)</strong>
@@ -93,9 +85,8 @@
 
             <div class="privacySub">
               <h3 class="pSubTitle">Your Choices</h3>
-              <p>You can:</p>
               <p>Unsubscribe from our emails at any time by clicking the link at the bottom of any message we send.</p>
-              <p>Request deletion of your information from our mailing list by emailing us at <a href="mailto:updates@allunderhvn.com">updates@allunderhvn.com</a></p>
+              <p>Or you can hit us up directly to delete your information from our mailing list by emailing us at <a href="mailto:updates@allunderhvn.com">updates@allunderhvn.com</a></p>
             </div>
 
             <div class="privacySub">
@@ -118,14 +109,20 @@
             </nav>
 
             <nav class="footerSocials">
-                <a href="https://www.instagram.com/allunderhvn/" target="_blank"><img src="images/iglogo.svg" alt="Instagram"></a>
-                <a href="https://www.facebook.com/profile.php?id=100064778059647" target="_blank"><img src="images/fblogo.svg" alt="Facebook"></a>
-            </nav>
+          <a href="https://www.instagram.com/allunderhvn/" target="_blank"
+            ><img src="images/icons8-instagram-50.png" alt="Instagram"
+          /></a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100064778059647"
+            target="_blank"
+            ><img src="images/icons8-facebook-50.png" alt="Facebook"
+          /></a>
+        </nav>
         </div>
 
         <div class="footerBottom">
             <p>© 2025 All Under Heaven</p>
-            <nav class="legal-links">
+            <nav class="legalLinks">
                 <a href="privacy.html">Privacy Policy</a>
                 <a href="shipping.html">Shipping Policy</a>
                 <a href="returns.html">Returns</a>
