--- a/tickets.html
+++ b/tickets.html
@@ -12,15 +12,7 @@
   <body class="bodyBackground">
     <div class="pageWrapper">
       <header>
-      <div class="pageTitle">
-        <h1 class="noisyText">
-          <span class="titleLine">ALL UNDER</span>
-          <span class="heavenWord">
-            HE<span class="letterA">A</span><span class="letterV">V</span
-            ><span class="letterE">E</span>N
-          </span>
-        </h1>
-      </div>
+      <div class="titleImage"></div>
 
       <nav role="navigation">
         <div id="menuToggle">
@@ -127,12 +119,12 @@
 
         <nav class="footerSocials">
           <a href="https://www.instagram.com/allunderhvn/" target="_blank"
-            ><img src="images/iglogo.svg" alt="Instagram"
+            ><img src="images/icons8-instagram-50.png" alt="Instagram"
           /></a>
           <a
             href="https://www.facebook.com/profile.php?id=100064778059647"
             target="_blank"
-            ><img src="images/fblogo.svg" alt="Facebook"
+            ><img src="images/icons8-facebook-50.png" alt="Facebook"
           /></a>
         </nav>
       </div>
