--- a/privacy.html
+++ b/privacy.html
@@ -108,7 +108,7 @@
                 <a href="shipping.html">Shipping</a>
             </nav>
 
-            <nav class="footerSocials">
+          <nav class="footerSocials">
           <a href="https://www.instagram.com/allunderhvn/" target="_blank"
             ><img src="images/icons8-instagram-50.png" alt="Instagram"
           /></a>
@@ -116,6 +116,31 @@
             href="https://www.facebook.com/profile.php?id=100064778059647"
             target="_blank"
             ><img src="images/icons8-facebook-50.png" alt="Facebook"
+          /></a>
+          <a
+            href="https://x.com/allunderhvn"
+            target="_blank"
+            ><img src="images/icons8-x-50.png" alt="Twitter"
+          /></a>
+          <a
+            href="https://open.spotify.com/artist/0RzwdSzh3shHCYdE36Fizn?si=PWiLS0HrRS-X8HpROSCE8Q"
+            target="_blank"
+            ><img src="images/icons8-spotify-50.png" alt="Spotify"
+          /></a>
+          <a
+            href="https://music.apple.com/us/artist/all-under-heaven/1549871921"
+            target="_blank"
+            ><img src="images/icons8-music-50.png" alt="Apple Music"
+          /></a>
+          <a
+            href="https://soundcloud.com/allunderheaven"
+            target="_blank"
+            ><img src="images/icons8-soundcloud-50.png" alt="Soundcloud"
+          /></a>
+          <a
+            href="https://allunderheaven.bandcamp.com/"
+            target="_blank"
+            ><img src="images/icons8-bandcamp-50.png" alt="Bandcamp"
           /></a>
         </nav>
         </div>
