--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body class="bodyBackground">
     <header>
-      <div class="titleImage"></div>
+      <a class="titleImage" href="index.html"></a>
 
       <nav role="navigation">
         <div id="menuToggle">
