--- a/tickets.html
+++ b/tickets.html
@@ -12,7 +12,7 @@
   <body class="bodyBackground">
     <div class="pageWrapper">
       <header>
-      <div class="titleImage"></div>
+      <a class="titleImage" href="index.html"></a>
 
       <nav role="navigation">
         <div id="menuToggle">
