--- a/privacy.html
+++ b/privacy.html
@@ -14,7 +14,7 @@
         <div class="pageWrapper">
 
         <header>
-      <div class="titleImage"></div>
+      <a class="titleImage" href="index.html"></a>
 
       <nav role="navigation">
         <div id="menuToggle">
