Updated show listings / SEO optimiaztion

--- a/index.html
+++ b/index.html
@@ -4,7 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>all under heaven</title>
+    <meta name="description" content="All Under Heaven is a shoegaze band from Freehold, New Jersey. Listen to our music, find tour dates, and shop official merch.">
+    <meta name="keywords" content="All Under Heaven, shoegaze band, post-punk, dream pop, New Jersey music">
+    <link rel="canonical" href="https://allunderhvn.com/" />
     <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon" />
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MusicGroup",
+    "name": "All Under Heaven",
+    "alternateName": "AUH",
+    "url": "https://allunderhvn.com",
+    "genre": "Shoegaze",
+    "foundingLocation": "Freehold, New Jersey, USA",
+    "sameAs": [
+      "https://www.instagram.com/allunderhvn/",
+      "https://www.facebook.com/profile.php?id=100064778059647",
+      "https://x.com/allunderhvn",
+      "https://open.spotify.com/artist/0RzwdSzh3shHCYdE36Fizn",
+      "https://music.apple.com/us/artist/all-under-heaven/1549871921",
+      "https://allunderheaven.bandcamp.com/",
+      "https://soundcloud.com/allunderheaven"
+    ]
+  }
+  </script>
     <link rel="stylesheet" href="style.css?v=18" />
     <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
   </head>
