--- a/returns.html
+++ b/returns.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>returns - all under heaven</title>
+        <title>returns - auh</title>
         <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css?v=3">
         <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
