--- a/music.html
+++ b/music.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>all under heaven</title>
+    <title>music - auh</title>
     <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css?v=7" />
     <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
