--- a/tickets.html
+++ b/tickets.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>all under heaven</title>
+    <title>tickets - auh</title>
     <link rel="icon" href="images/auhlogo512x512.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css?v=7" />
     <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
@@ -58,6 +58,24 @@
             </div>
               <a
                 href="https://www.eventbrite.com/e/rival-schools-at-crossroads-w-all-under-heaven-high-tickets-1375107626929"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>August 21st, 2025</p>
+            </div>
+            <div class="tourVenue">
+              <p>Elsewhere</p>
+            </div>
+            <div class="tourLocation">
+              <p>Brooklyn, NY</p>
+            </div>
+              <a
+                href="https://www.eventbrite.com/e/midrift-febuary-i-promised-the-world-all-under-heaven-tickets-1345700369029?aff=aff0bandsintown&comeFrom=2510&artist_event_id=1035899055&bit_userid=%24%7Buser_id%7D&appId=onaqfvagbja_jro"
                 class="tourLink"
                 target="_blank"
                 >TICKETS</a
