--- a/tickets.html
+++ b/tickets.html
@@ -46,23 +46,7 @@
 
       <main>
         <section class="tourTickets">
-          <div class="tourBorder">
-            <div class="tourDates">
-              <p>August 12th, 2025</p>
-            </div>
-            <div class="tourVenue">
-              <p>Crossroads</p>
-            </div>
-            <div class="tourLocation">
-              <p>Garwood, NJ</p>
-            </div>
-              <a
-                href="https://www.eventbrite.com/e/rival-schools-at-crossroads-w-all-under-heaven-high-tickets-1375107626929"
-                class="tourLink"
-                target="_blank"
-                >TICKETS</a
-              >
-          </div>
+          
 
           <div class="tourBorder">
             <div class="tourDates">
@@ -79,6 +63,24 @@
                 class="tourLink"
                 target="_blank"
                 >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>August 30th, 2025</p>
+            </div>
+            <div class="tourVenue">
+              <p>Gold Sounds</p>
+            </div>
+            <div class="tourLocation">
+              <p>Brooklyn, NY</p>
+            </div>
+              <a
+                href="https://www.instagram.com/p/DM0XzsCA3Pj/"
+                class="tourLink"
+                target="_blank"
+                >TIX @ DOOR</a
               >
           </div>
 
@@ -114,7 +116,7 @@
                 href="https://www.chubbydogcoffee.com/smalltownmusicfest"
                 class="tourLink"
                 target="_blank"
-                >FREE!!!!!!</a
+                >FREE</a
               >
           </div>
 
