Ticket page Update

--- a/tickets.html
+++ b/tickets.html
@@ -50,42 +50,6 @@
 
           <div class="tourBorder">
             <div class="tourDates">
-              <p>August 21st, 2025</p>
-            </div>
-            <div class="tourVenue">
-              <p>Elsewhere</p>
-            </div>
-            <div class="tourLocation">
-              <p>Brooklyn, NY</p>
-            </div>
-              <a
-                href="https://www.eventbrite.com/e/midrift-febuary-i-promised-the-world-all-under-heaven-tickets-1345700369029?aff=aff0bandsintown&comeFrom=2510&artist_event_id=1035899055&bit_userid=%24%7Buser_id%7D&appId=onaqfvagbja_jro"
-                class="tourLink"
-                target="_blank"
-                >TICKETS</a
-              >
-          </div>
-
-          <div class="tourBorder">
-            <div class="tourDates">
-              <p>August 30th, 2025</p>
-            </div>
-            <div class="tourVenue">
-              <p>Gold Sounds</p>
-            </div>
-            <div class="tourLocation">
-              <p>Brooklyn, NY</p>
-            </div>
-              <a
-                href="https://www.instagram.com/p/DM0XzsCA3Pj/"
-                class="tourLink"
-                target="_blank"
-                >TIX @ DOOR</a
-              >
-          </div>
-
-          <div class="tourBorder">
-            <div class="tourDates">
               <p>October 10th, 2025</p>
             </div>
             <div class="tourVenue">
@@ -117,6 +81,24 @@
                 class="tourLink"
                 target="_blank"
                 >FREE</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>December 12th, 2025</p>
+            </div>
+            <div class="tourVenue">
+              <p>The Palladium</p>
+            </div>
+            <div class="tourLocation">
+              <p>Worcester, MA</p>
+            </div>
+              <a
+                href="https://www.tixr.com/groups/thepalladium/events/glassjaw-saves-the-day-159594"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
               >
           </div>
 
