--- a/tickets.html
+++ b/tickets.html
@@ -48,41 +48,7 @@
         <section class="tourTickets">
           
 
-          <div class="tourBorder">
-            <div class="tourDates">
-              <p>October 10th, 2025</p>
-            </div>
-            <div class="tourVenue">
-              <p>Market Hotel</p>
-            </div>
-            <div class="tourLocation">
-              <p>Brooklyn, NY</p>
-            </div>
-              <a
-                href="https://tickets.venuepilot.com/e/sunday-drive-10-year-showcase-leaving-time-all-under-heaven-squint-special-guest-fever-child-fake-eye-f51560"
-                class="tourLink"
-                target="_blank"
-                >TICKETS</a
-              >
-          </div>
 
-          <div class="tourBorder">
-            <div class="tourDates">
-              <p>October 11th, 2025</p>
-            </div>
-            <div class="tourVenue">
-              <p>144 Main St</p>
-            </div>
-            <div class="tourLocation">
-              <p>Danielson, CT</p>
-            </div>
-              <a
-                href="https://www.chubbydogcoffee.com/smalltownmusicfest"
-                class="tourLink"
-                target="_blank"
-                >FREE</a
-              >
-          </div>
 
           <div class="tourBorder">
             <div class="tourDates">
@@ -96,6 +62,24 @@
             </div>
               <a
                 href="https://www.tixr.com/groups/thepalladium/events/glassjaw-saves-the-day-159594"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>December 13th, 2025</p>
+            </div>
+            <div class="tourVenue">
+              <p>Zebulon</p>
+            </div>
+            <div class="tourLocation">
+              <p>Los Angeles, CA</p>
+            </div>
+              <a
+                href="https://dice.fm/partner/tickets/event/bbnpyo-sway-fest-day-one-13th-dec-zebulon-los-angeles-tickets?dice_id=7367990&dice_channel=web&dice_tags=organic&dice_campaign=Ipsilon%2C+LLC+dba+Zebulon&dice_feature=mio_marketing&utm_source=web&utm_campaign=Ipsilon%2C+LLC+dba+Zebulon&utm_medium=mio_marketing"
                 class="tourLink"
                 target="_blank"
                 >TICKETS</a
